--- a/templates/notebook/index.html
+++ b/templates/notebook/index.html
@@ -1,5 +1,14 @@
 {% extends "notebook/base.html" %}
 
+{% block title %}
+
+    My Webpage 2
+
+{% endblock %}
+
 {% block content %}
-<p> "hello" </p>
-{% endblock content %}
+    <h1>Index</h1>
+    <p class="important">
+      Welcome to my awesome homepage.
+    </p>
+{% endblock %}
