--- a/templates/blog/footer.html
+++ b/templates/blog/footer.html
@@ -1,1 +1,7 @@
-<p> "footer" </p>
+<!-- footer -->
+	<div class="footer">
+		<div class="container">
+			<p>Copyrights © 2022  All rights reserved | o.citkowski@gmail.com</p>
+		</div>
+	</div>
+<!-- footer -->
