--- a/templates/blog/header.html
+++ b/templates/blog/header.html
@@ -1,65 +1,40 @@
-{% load static %}
-<head>
-<title>{{ title }}</title>
-<link href="{% static 'blog/css/bootstrap.css' %}" rel="stylesheet" type="text/css" media="all">
-<link href="{% static 'blog/css/style.css' %}" rel="stylesheet" type="text/css" media="all" />
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Trade Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900' rel='stylesheet' type='text/css'>
-<script src="{% static 'blog/js/jquery.min.js' %}"></script>
-    <link rel="stylesheet" href="{% static 'blog/css/swipebox.css' %}">
- <!------ Light Box ------>
-    <script src=" {% static 'blog/js/jquery.swipebox.min.js' %}"></script>
-    <script type="text/javascript">
-		jQuery(function($) {
-			$(".swipebox").swipebox();
-		});
-	</script>
-    <!------ Eng Light Box ------>
-</head>
+<!doctype html>
 
-<body>
-<!-- header -->
- <div class="container">
-	<div class="header">
-			<div class="logo">
-				<a href= {{ post.get_absolute_url }} ><img src="/images/logo.png" class="img-responsive" alt="" /> <h1>LOGO!!!</h1> </a>
-			</div>
-			<div class="nav-top">
-				<div class="head-nav">
-					<span class="menu"> </span>
-						<ul class="cl-effect-16">
-						<li><a href={{ post.get_absolute_url }} >HOME</a></li>
-							<li><a href={{ category.get_absolute_url }} >Notes</a></li>
-							<li><a href="services.html"  data-hover="SERVICES">SERVICES</a></li>
-							<li><a href="404.html"  data-hover="SOLUTIONS">SOLUTIONS</a></li>
-							<li><a href="contact.html"  data-hover="CONTACT">CONTACT</a></li>
-								<div class="clearfix"> </div>
-						</ul>
-				</div>
-			</div>
-			<div class="clearfix"> </div>
-						<!-- script-for-nav -->
-					<script>
-						$( "span.menu" ).click(function() {
-						  $( ".head-nav ul" ).slideToggle(300, function() {
-							// Animation complete.
-						  });
-						});
-					</script>
-				<!-- script-for-nav -->
-			</div>
-	</div>
-	<div class="banner">
-		<div class="container">
-			<div class="banner-info">
-				<h1>Hello!!!</h1>
-				<a href="#" class="btn  btn-1c btn1 btn-1d">Read Me</a>
-			</div>
-		</div>
-	</div>
-<!-- header -->
-</body>
+{% load static %}
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Hugo 0.84.0">
+    <title>Blog Template · Bootstrap v5.0</title>
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/blog/">
+
+
+    <!-- Bootstrap core CSS -->
+    <link href="{% static 'blog/css/bootstrap.min.css' %}" rel="stylesheet">
+
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+
+
+    <!-- Custom styles for this template -->
+    <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="{% static 'blog/css/blog.css' %}" rel="stylesheet">
+  </head>
