--- a/templates/blog/footer.html
+++ b/templates/blog/footer.html
@@ -1,7 +1,10 @@
-<footer class="blog-footer">
-	<p>Copyrights © 2022  All rights reserved | <a href="mailto:o.citkowski@gmail.com">o.citkowski@gmail.com</a> </p>
-  <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-  <p>
-    <a href="#">Back to top</a>
-  </p>
+<footer class="footer mt-auto py-3 bg-light">
+    <div class="container">
+    <span class="text-muted">
+        <p>Copyrights © 2022  All rights reserved | <a href="mailto:o.citkowski@gmail.com">o.citkowski@gmail.com</a></p>
+        <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a
+          href="https://twitter.com/mdo">@mdo</a>.</p>
+        <p><a href="#">Back to top</a></p>
+    </span>
+    </div>
 </footer>
