--- a/templates/blog/header.html
+++ b/templates/blog/header.html
@@ -32,9 +32,11 @@
       }
     </style>
 
-
     <!-- Custom styles for this template -->
     <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
+
+
     <!-- Custom styles for this template -->
     <link href="{% static 'blog/css/blog.css' %}" rel="stylesheet">
+    <link href="{% static 'blog/css/sticky-footer-navbar.css' %}" rel="stylesheet">
   </head>
