--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -19,7 +19,7 @@
         </a>
       </div>
       <div class="col-4 text-center">
-        <a class="blog-header-logo text-dark" href="#">Large2</a>
+        <a class="blog-header-logo text-dark" href="#">My notes</a>
       </div>
       <div class="col-4 d-flex justify-content-end align-items-center">
         <a class="link-secondary" href="#" aria-label="Search">
