--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -58,7 +58,7 @@
 
         <p class="blog-post-meta">
           {% for tag in post.tag.all %}
-          <a href="#"> #{{ tag }} </a> <a> / </a>
+          <a href="{% url 'blog_urls:tag_page' tag.slug %}"> #{{ tag }} </a> <a> / </a>
           {% endfor %}
         </p>
 
