--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -14,8 +14,8 @@
   <header class="blog-header py-3" >
     <div class="row flex-nowrap justify-content-between align-items-center">
       <div class="col-4 pt-1">
-        <a class="link-secondary" href="#">
-          Subscribe
+        <a class="link-secondary" href="{% url 'blog_urls:home' %}">
+          >> Home
         </a>
       </div>
       <div class="col-4 text-center">
@@ -31,7 +31,13 @@
             <path d="M21 21l-5.2-5.2"/>
           </svg>
         </a>
-        <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
+        {% if user.is_authenticated %}
+        Hello, {{user.username}}
+        <a class="btn btn-sm btn-outline-secondary" href="{% url 'users:logout' %}">Log out</a>
+        {% else %}
+        <a class="btn btn-sm btn-outline-secondary" href="{% url 'users:register' %}">Sign up</a>
+        <a class="btn btn-sm btn-outline-secondary" href="{% url 'users:login' %}">Log in</a>
+        {% endif %}
       </div>
     </div>
   </header>
@@ -261,6 +267,7 @@
 
 </main>
 {% endblock content %}
+
 {% include 'blog/footer.html' %}
 </body>
 
